--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<app-escena [textToEscena]="storyTexts"></app-escena>
+<div class="divInicial" *ngIf="start === false">
+  <h1>Angular Sprint 6</h1>
+  <hr>
+  <h3>En aquest sprint crearem una llista navegable amb Angular.</h3>
+  <hr>
+  <button type="text" class="btnStart"
+         (click)="inici()">Començar</button>
+</div>
+
+<app-escena [textToEscena]="storyTexts" *ngIf="start === true"></app-escena>
