--- a/src/app/components/escena/escena.component.html
+++ b/src/app/components/escena/escena.component.html
@@ -1,13 +1,16 @@
-<div class="btnContainer">
-  <button type="text" class="btn" (click)="prev()">Anterior</button>
-  <button type="text" class="btn" (click)="next()">Següent</button>
-</div>
+<div class="container">
+  <img class="bg-img" src="{{textToEscena[currentSentence].img}}">
+  <div class="btnContainer">
+    <button type="text" class="btn" (click)="prev()">Anterior</button>
+    <button type="text" class="btn" (click)="next()">Següent</button>
+  </div>
 
-<div
-  class="listItem"
-  *ngFor="let text of textToEscena;
-          let i= index"
-  [ngClass]="( i === currentSentence) ? 'active' : ''">
-    {{text}}
+  <div
+    class="listItem"
+    *ngFor="let text of textToEscena;
+            let i= index"
+    [ngClass]="( i === currentSentence) ? 'active' : ''">
+      {{text.txt}}
+  </div>
 </div>
 
